Fix Tag color on iOS (#2951)
* Fix Tag color on iOS

* Fix Storybook preview

* Use latest color tokens for Storybook

* Upgrade vulnerable dependencies

--- a/packages/circuit-ui/components/Tag/Tag.module.css
+++ b/packages/circuit-ui/components/Tag/Tag.module.css
@@ -12,6 +12,7 @@
   margin: 0;
   font-size: var(--cui-body-m-font-size);
   line-height: var(--cui-body-m-line-height);
+  color: var(--cui-fg-normal);
   overflow-wrap: break-word;
   cursor: default;
   background-color: var(--cui-bg-normal);
